# manifolds-rs

./: Cargo.toml  readme.md
examples/: spd_example.rs
src/: lib.rs
src/algorithms/: mod.rs  optimization.rs
src/core/: error.rs  mod.rs  product.rs  traits.rs
src/manifolds/: euclidean.rs  mod.rs  spd.rs  sphere.rs  stiefel.rs
tests/: optimizer_validation_tests.rs
